[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flyql_generators"
version = "0.0.3"
dependencies = [
    "clickhouse-driver == 0.2.7",
    "flyql @ git+https://github.com/iamtelescope/flyql.git@30201d121d4afc83717cf59f8417add66e418ced#subdirectory=python"
]
license = { text = "MIT License" }
authors = [
    { name = "Ilia (HumanUser) Khomutov" }
]
description = "fly query language gode generators"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iamtelescope/flyql-generators/tree/main/python/flyql_generators"
