[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flyql_generators"
version = "0.0.3"
dependencies = [
    "clickhouse-driver == 0.2.7",
    "flyql @ git+https://github.com/iamtelescope/flyql.git@13f3dbc93224cad802f163cd04ec6c7754c3740f#subdirectory=python"
]
license = { text = "MIT License" }
authors = [
    { name = "Ilia (HumanUser) Khomutov" }
]
description = "fly query language gode generators"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iamtelescope/flyql-generators/tree/main/python/flyql_generators"
